test_regress/t/t_func_const2_bad.out
%Warning-USERFATAL: f_add = 15
                    ... Use "/* verilator lint_off USERFATAL */" and lint_on around source to disable this message.
%Error: t/t_func_const2_bad.v:10: Expecting expression to be constant, but can't determine constant for FUNCREF 'f_add2'
        t/t_func_const2_bad.v:21: ... Location of non-constant STOP: $stop executed during function constification; maybe indicates assertion firing
        t/t_func_const2_bad.v:26: ... Called from f_add() with parameters:
           a = 32'h7
           b = 32'h8
        t/t_func_const2_bad.v:10: ... Called from f_add2() with parameters:
           a = ?32?sh7
           b = ?32?sh8
           c = ?32?sh9
%Error: Exiting due to
